app/client/styles/invite.scss
@import './yd-variables.scss';
@import "bootstrap/scss/functions.scss";
@import "bootstrap/scss/variables.scss";
@import "bootstrap/scss/mixins.scss";
@import "bootstrap/scss/reboot.scss";
@import "bootstrap/scss/buttons.scss";
// @import "bootstrap/scss/forms.scss";

html, body {
	height: 100%;
}

textarea {
	min-height: 80px;
}

.__next { min-height: 100%; }

.wedding-invitation {
	font-family: 'Roboto Condensed';
	font-weight: 300;
	text-align: center;
	
	h1, h2 { font-family: 'Great Vibes', cursive; }
	h1 { font: 52px/56px Great Vibes; }
}
	
.yd-container { margin: auto; max-width: 600px; }


.fancy {
	font: 1.5em/normal 'Great Vibes';
	padding: 0 5px;
	.fancy { font: 1em/normal 'Great Vibes'; }
}

.row {
	display: flex;
	flex-wrap: wrap;
}

.svg-container { 
	display: inline-block;
	position: relative;
	width: 100%;
	padding-bottom: 50%; 
	vertical-align: middle; 
	overflow: hidden; 

	.svg-content { 
		display: inline-block;
		position: absolute;
		top: 0;
		left: 0;
	}
}

.section {
	padding: 40px 20px;
	// min-height: 400px;
	min-height: 30vw;
	@media screen and (min-width: 1200px) {
		padding: 60px 30px;
	}
}

.emblem {
	max-width: 300px;
	width: 85%;
}

.selfie {
	display: flex;
	justify-content: center;
	width: 200px;
	height: 200px;
	overflow: hidden;
	border-radius: 200px;
	position: relative;
	&:before {
		content: '';
		position: absolute;
		width: 100%;
		height: 100%;
		border: 10px solid rgba(255, 255, 255, 0.3);
		top: 0;
		left: 0;
		border-radius: 100%;
	}
	img { height:100%; }
}

.section-title {
	text-align: center;
	margin-bottom: 50px;
	font: 42px/46px Great Vibes;

	@media screen and (min-width: 768px){
		font: 47px/51px Great Vibes;
	}

	@media screen and (min-width: 1200px){
		font: 62px/66px Great Vibes;
	}

	span { display: inline-block; }
	span:first-of-type {
		font: 300 26px/40px Roboto Condensed;
		position: relative;
		padding-right: 30px;
		&:after {
			content: '';
			border-right: 1px solid;
			transform: rotateZ(20deg);
			display: inline-block;
			height: calc(100% + 20px);
			width: 1px;
			background: #000;
			position: absolute;
			top: -10px;
			right: 15px;
			padding: 10px 0;
		}
	}
}

.bridal-party {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.bridal-party-member {
	margin: 15px; 
	padding: 20px; 
	justify-content: flex-end;
	display: flex;
	flex-direction: column;

	.badge {
		font-size: 0.8rem;
		height: 30px;
		padding: 0 10px;
		display: flex;
		align-items: center;
		justify-content: center;
		text-transform: uppercase;
		margin: 0 auto 15px;
		background: black;
		border-radius: 6px;
		color: #e9e9e9;
	}

	header { font-family: 'Great Vibes'; font-size: 2rem; }
	footer { font-style: italic; color: #969696; }

	&.primary {
		background: url('/assets/noisy_net.png');
		color: #bebebe;
		
		@media (min-width: 1400px) {
			margin: 30px; 
			padding: 30px; 
		}
	}
}

.section-bridal-party {
	background: rgb(255, 253, 249);
}

.section-groomsmen {
	background: url('/assets/noisy_net.png');
	.section-title { color: #bebebe; }
	.bridal-party-member {
		color: #e9e9e9;
		&.primary {
			background: #969696;
			color: #000;
			footer { color: #454545; }
		}
	}
}

.section-donate {
	background: url('/assets/brushed_alu.png');
	svg {
		width: 150px;
		g { fill: #000; transition: fill 300ms; }
		&:hover {
			animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
			transform: translate3d(0, 0, 0);
			backface-visibility: hidden;
			perspective: 1000px;
			g { fill: $primary-selected; }
		}
		&:active g { fill: $primary; }
	}
	p > .fancy { letter-spacing: -4px }
}

@keyframes infinityrotate {
  0% {
    transform: rotateX(0deg) rotateY(0deg);
  }
	
  50% {
		transform: rotateX(180deg) rotateY(0deg);
	}
	
	100% {
		transform: rotateX(180deg) rotateY(180deg);
	}
}

@keyframes shake {
  10%, 90% {
    transform: translate3d(-1px, 0, 0);
  }
  
  20%, 80% {
    transform: translate3d(2px, 0, 0);
  }

  30%, 50%, 70% {
    transform: translate3d(-4px, 0, 0);
  }

  40%, 60% {
    transform: translate3d(4px, 0, 0);
  }
}

